@@ -6,7 +6,6 @@ import kr.astar.api.soopliv.data.Donate;
 import kr.astar.api.soopliv.data.User;
 import kr.astar.api.soopliv.soop.listener.SoopEventListener;
 import kr.astar.api.soopliv.utilities.Debugger;
-import lombok.Getter;
 import org.java_websocket.client.WebSocketClient;
 import org.java_websocket.drafts.Draft_6455;
 import org.java_websocket.handshake.ServerHandshake;
@@ -20,16 +19,13 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 
-
 public class SoopWebSocket extends WebSocketClient {
     private final SoopLiveInfo liveInfo;
-    @Getter
     private final Map<String, String> soopUser;
     private final SoopEventListener listener;
     private final Debugger debugger;
 
     private Thread pingThread;
-
     private boolean isAlive = true;
     private boolean poong = false;
 
@@ -40,7 +36,7 @@ public class SoopWebSocket extends WebSocketClient {
     private static final String COMMAND_CONNECT = "0001";
     private static final String COMMAND_JOIN = "0002";
     private static final String COMMAND_ENTER = "0004";
-    private static final String COMMAND_ENTER_FAN = "0127"; // 0004직후 호출 됨, 입장한 유저의 열혈팬/팬 구분으로 추정
+    private static final String COMMAND_ENTER_FAN = "0127";
     private static final String COMMAND_CHAT = "0005";
     private static final String COMMAND_DONE = "0018";
     private static final String COMMNAD_C = "0110";
@@ -48,11 +44,8 @@ public class SoopWebSocket extends WebSocketClient {
     private static final String COMMNAD_E = "0090";
     private static final String COMMNAD_F = "0094";
 
-    // 최초 연결시 전달하는 패킷, CONNECT_PACKET = f'{ESC}000100000600{F*3}16{F}'
     private static final String CONNECT_PACKET = makePacket(COMMAND_CONNECT, String.format("%s16%s", F.repeat(3), F));
-    // CONNECT_PACKET 전송시 수신 하는 패킷, CONNECT_PACKET = f'{ESC}000100000700{F*3}16|0{F}'
     private static final String CONNECT_RES_PACKET = makePacket(COMMAND_CONNECT, String.format("%s16|0%s", F.repeat(2), F));
-    // 주기적으로 핑을 보내서 메세지를 계속 수신하는 패킷, PING_PACKET = f'{ESC}000000000100{F}'
     private static final String PING_PACKET = makePacket(COMMAND_PING, F);
 
     private final Map<String, SoopPacket> packetMap = new HashMap<>();
@@ -63,7 +56,7 @@ public class SoopWebSocket extends WebSocketClient {
             SoopLiveInfo liveInfo,
             Map<String, String> soopUser,
             boolean genBalloon,
-            boolean isDebug ,
+            boolean isDebug,
             SoopEventListener listener
     ) {
         super(URI.create(serverUri), draft6455);
@@ -73,19 +66,21 @@ public class SoopWebSocket extends WebSocketClient {
         this.liveInfo = liveInfo;
         this.soopUser = soopUser;
         this.poong = genBalloon;
-        this.debugger= new Debugger();
-        this.debugger.isDebug=isDebug;
+        this.debugger = new Debugger();
+        this.debugger.isDebug = isDebug;
         this.listener = listener;
+    }
+
+    public Map<String, String> getSoopUser() {
+        return soopUser;
     }
 
     @Override
     public void onOpen(ServerHandshake handshakedata) {
         debugger.log("[" + soopUser.get("nickname") + "] 숲 웹소켓 연결이 연결되었습니다.");
-
         isAlive = true;
 
         pingThread = new Thread(() -> {
-            // 최초 Connect 패킷 전송
             send(CONNECT_PACKET.getBytes(StandardCharsets.UTF_8));
 
             while (isAlive) {
@@ -114,24 +109,17 @@ public class SoopWebSocket extends WebSocketClient {
 
     @Override
     public void onMessage(ByteBuffer bytes) {
-//        debugger.log("[" + soopUser.get("nickname") + "] onMessage: " + new String(bytes.array(), StandardCharsets.UTF_8));
-
         String message = new String(bytes.array(), StandardCharsets.UTF_8);
 
         if (CONNECT_RES_PACKET.equals(message)) {
             String CHATNO = liveInfo.CHATNO();
-            // 메세지를 내려받기 위해 보내는 패킷, JOIN_PACKET = f'{ESC}0002{calculate_byte_size(CHATNO):06}00{F}{CHATNO}{F*5}'
             String JOIN_PACKET = makePacket(COMMAND_JOIN, String.format("%s%s%s", F, CHATNO, F.repeat(5)));
-            byte[] joinPacketBytes = JOIN_PACKET.getBytes(StandardCharsets.UTF_8);
-
-            send(joinPacketBytes);
-
+            send(JOIN_PACKET.getBytes(StandardCharsets.UTF_8));
             return;
         }
 
         try {
             SoopPacket packet = new SoopPacket(message.replace(ESC, "").split(F));
-
             String cmd = packet.getCommand();
             debugger.log("COMMAND: " + cmd);
             List<String> dataList = switch (cmd) {
@@ -139,9 +127,7 @@ public class SoopWebSocket extends WebSocketClient {
                 default -> packet.getDataList();
             };
 
-            if (dataList == null) {
-                return;
-            }
+            if (dataList == null) return;
 
             if (cmd.equals(COMMAND_DONE)) {
                 String nickname = dataList.get(2);
@@ -152,14 +138,11 @@ public class SoopWebSocket extends WebSocketClient {
                 }
                 CompletableFuture.runAsync(() -> {
                     try {
-                        Thread.sleep(1000); // 1초 타임아웃
+                        Thread.sleep(1000);
                         synchronized (packetMap) {
                             var removed = packetMap.remove(nickname);
-                            if (removed == null) {
-                                return;
-                            }
+                            if (removed == null) return;
                         }
-
                         int tempPayAmount = Integer.parseInt(dataList.get(3));
                         int payAmount = poong ? tempPayAmount : tempPayAmount * 100;
                         handleDone(user, payAmount, "");
@@ -169,24 +152,19 @@ public class SoopWebSocket extends WebSocketClient {
                     }
                 });
             } else if (cmd.equals(COMMAND_CHAT)) {
-                // id: [1]; nick: [5]; msg: [0]
                 String nick = dataList.get(5);
-
                 SoopPacket donePacket;
                 synchronized (packetMap) {
                     donePacket = packetMap.remove(nick);
                     if (donePacket == null) {
                         User user = new User(dataList.get(1), dataList.get(5));
-
                         String msg = dataList.get(0);
                         handleChat(user, msg);
                         return;
                     }
                 }
-
                 User user = new User(donePacket.getDataList().get(1), donePacket.getDataList().get(5));
-
-                String msg = dataList.getFirst();
+                String msg = dataList.get(0);
                 int tempPayAmount = Integer.parseInt(donePacket.getDataList().get(3));
                 int payAmount = poong ? tempPayAmount : tempPayAmount * 100;
                 handleDone(user, payAmount, msg);
@@ -206,13 +184,10 @@ public class SoopWebSocket extends WebSocketClient {
         listener.onChat(new Chat(liveInfo.BJID(), user, msg));
     }
 
-
     @Override
     public void onClose(int code, String reason, boolean remote) {
         debugger.log("[" + soopUser.get("nickname") + "] 숲 웹소켓 연결이 끊겼습니다.");
-
         isAlive = false;
-
         pingThread.interrupt();
         pingThread = null;
     }
@@ -221,10 +196,7 @@ public class SoopWebSocket extends WebSocketClient {
     public void onError(Exception ex) {
         debugger.log("[" + soopUser.get("nickname") + "] 숲 웹소켓 연결 중 오류가 발생했습니다.");
         debugger.log(ex.getMessage());
-
-        if (listener != null) {
-            listener.onError(ex);
-        }
+        if (listener != null) listener.onError(ex);
     }
 
     private static String makePacket(String command, String data) {
@@ -238,35 +210,18 @@ public class SoopWebSocket extends WebSocketClient {
     public void kill() {
         try {
             isAlive = false;
-
             if (pingThread != null && pingThread.isAlive()) {
                 pingThread.interrupt();
                 pingThread = null;
             }
 
-            try {
-                stopConnectionLostTimer();
-            } catch (Exception ignored) {}
-
-            try {
-                if (getConnection() != null) {
-                    getConnection().closeConnection(1000, "Killed");
-                }
-            } catch (Exception ignored) {}
-
-            try {
-                if (getSocket() != null && !getSocket().isClosed()) {
-                    getSocket().shutdownInput();
-                    getSocket().shutdownOutput();
-                    getSocket().close();
-                }
-            } catch (Exception ignored) {}
+            try { stopConnectionLostTimer(); } catch (Exception ignored) {}
+            try { if (getConnection() != null) getConnection().closeConnection(1000, "Killed"); } catch (Exception ignored) {}
+            try { if (getSocket() != null && !getSocket().isClosed()) { getSocket().shutdownInput(); getSocket().shutdownOutput(); getSocket().close(); } } catch (Exception ignored) {}
 
             try {
                 Thread t = new Thread(() -> {
-                    try {
-                        super.closeBlocking();
-                    } catch (Exception ignored2) {}
+                    try { super.closeBlocking(); } catch (Exception ignored2) {}
                 });
                 t.setDaemon(true);
                 t.start();
@@ -279,5 +234,4 @@ public class SoopWebSocket extends WebSocketClient {
             debugger.log("[" + soopUser.get("nickname") + "] kill() 오류: " + e.getMessage());
         }
     }
-
 }
